# pyGAPS

./: .build.info  .bumpversion.cfg  .cookiecutterrc  .coveagerc  .coveragerc  .dev.info  .editorconfig  .gitignore  .pylintrc  .readthedocs.yaml  .release.info  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CHANGELOG.rst.orig  CITATION.cff  CONTRIBUTING.rst  LICENSE  LICENSE.md  MANIFEST.in  README.rst  Untitled.ipynb  appveyor.yml  appveyor_old.yml  caloprocessing.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: workflows.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yaml  deploy.yaml  main.yaml  pypi.yaml  tests.yaml
adsutils/: __init__.py
adsutils/calculations/: bet.py  initial_enthalpy.py  tplot.py
adsutils/classes/: pointisotherm.py  user.py
adsutils/dataimport/: excelinterface.py
adsutils/graphing/: iastgraphs.py  isothermgraphs.py
adsutils/tests/data isotherms/: HKUST-1(Cu) - Calorimetry - CO2.xlsx  NaY N2 phys.xlsx
adsutils/utilities/: matplotlib_chemformula.py
ci/: appveyor-bootstrap.ps1  appveyor-bootstrap.py  appveyor-download.py  bootstrap.py  windows-conda-bootstrap.ps1
ci/ci_old/: appveyor-download.py
ci/ci_old/templates/: .travis.yml  appveyor.yml
ci/templates/: .travis.yml  appveyor.yml  appveyor_old.yml  pyproject.toml  tox.ini
conda_recipe/: meta.yaml  requirements.yaml
docs/: cli.rst  conf.py  index.rst  indices.rst  installation.rst  quickstart.ipynb  quickstart.rst  requirements.txt  spelling_wordlist.txt  usage.rst
docs/_static/css/: custom.css
docs/examples/: alphas.ipynb  area_bet.ipynb  area_calcs.ipynb  area_langmuir.ipynb  bet.ipynb  characterisation.ipynb  characterisation.rst  database.ipynb  dr_da_plots.ipynb  enthalpy_sorption.ipynb  henryc.ipynb  iast.ipynb  import.ipynb  index.rst  initial_enthalpy.ipynb  initial_henryc.ipynb  initialenthalpy.ipynb  inspection.ipynb  isosteric_enthalpy.ipynb  isostericenthalpy.ipynb  isostericheat.ipynb  modelling.ipynb  parsing.ipynb  plotting.ipynb  psd.ipynb  quickstart.ipynb  tplot.ipynb
docs/examples/data/: carbon_x1_n2.json  isotherm.json
docs/files/: isotherm.aif  isotherm.csv  isotherm.json  isotherm.xls  isotherm.xlsx
docs/manual/: adsorbate.rst  characterisation.rst  dataparsing.rst  eqstate.rst  graphing.rst  iast.rst  index.rst  isotherm.rst  material.rst  modelling.rst  parsing.rst  parsing_modes.rst  plotting.rst  pygaps.rst  sample.rst  sqlitedb.rst  units.rst
docs/reference/: adsorpy.rst  adsutils.rst  calculations.rst  characterisation.rst  classes.rst  cli.rst  core.rst  fitting.rst  iast.rst  index.rst  interfaces.rst  modelling.rst  models.rst  parsing.rst  plotting.rst  pygaps.rst  units.rst  utilities.rst
docs/reference/characterisation/: alphas_plot.rst  area_bet.rst  area_lang.rst  dubinin.rst  enthalpy_sorption.rst  initial_enth.rst  initial_hk.rst  isosteric_enth.rst  meso_psd.rst  psd_dft.rst  psd_kernel.rst  psd_meso.rst  t_plot.rst  (+2 more)
examples/: examples.py  examples_calculations.py  examples_characterisation.ipynb  examples_import.py  examples_isotherm_functions.py  examples_modelling.py  examples_parsing.ipynb  examples_plotting.ipynb  examples_plotting.py  exceltodb.py  local_testing.py  nistscraping.py  quickstart.py  samplecomparisons.py  skip_tests.py
pygaps/: meta.yaml
shapingwork/: MIL-100(Fe) powder-pellet.py  MIL-127(Fe) powder-pellet.py  UiO-66(Zr) powder-pellet.py  comparisonfunctions.py  initialenths.py
src/adsutils/: __init__.py  api.py
src/pygaps/: __init__.py  api.py  data.py  logging.py
tests/: __init__.py  caloprocessing.py  conftest.py  context.py  examples.py  polarisationwork.py  samplecomparisons.py  test_basic.py  test_calculations.py  test_classes.py  test_imports.py  test_parser.py  test_sqlite_db.py  test_utilities.py  test_utils.py  testing.py  tests.py
tests/calculations/: conftest.py  test_alpha_s.py  test_area_bet.py  test_area_langmuir.py  test_bet.py  test_dr_da_plots.py  test_iast.py  test_initial_enthalpy.py  test_initial_henry.py  test_isosteric_enthalpy.py  test_isosteric_heat.py  test_kelvin_models.py  test_models_hk.py  test_models_isotherm.py  test_models_kelvin.py  test_models_thickness.py  test_psd.py  test_psd_dft.py  test_psd_meso.py  test_psd_micro.py  test_t_plot.py  test_thickness_models.py
tests/calo/: entete.txt
tests/characterisation/: conftest.py  test_alpha_s.py  test_alphas_plots.py  test_area_bet.py  test_area_langmuir.py  test_dr_da_plots.py  test_enth_sorp_clapeyron.py  test_enth_sorp_clausclap.py  test_enth_sorp_initial.py  test_enth_sorp_whittaker.py  test_hk_models.py  test_iast.py  test_initial_enthalpy.py  test_initial_henry.py  test_isosteric_enthalpy.py  test_kelvin_models.py  test_models_hk.py  test_models_kelvin.py  test_models_thickness.py  test_psd_dft.py  test_psd_kernel.py  test_psd_meso.py  test_psd_micro.py  test_t_plot.py  test_t_plots.py  test_thickness_models.py  test_whittaker_enthalpy.py
tests/classes/: test_adsorbate.py  test_classes.py  test_isotherm.py  test_material.py  test_modelisotherm.py  test_pointisotherm.py  test_sample.py
tests/cli/: test_cli.py
tests/core/: conftest.py  test_adsorbate.py  test_baseisotherm.py  test_isotherm.py  test_material.py  test_modelisotherm.py  test_pointisotherm.py
tests/data isotherms/: UiO-66(Zr) N2 phys.xlsx
tests/graphing/: test_calc_graphs.py  test_iast_graphs.py  test_iso_graphs.py
tests/isotherms/: Takeda 5A - Phil Billes - Calorimetrie - CO2 - Texp=303 - Tact=150 - CV - ADW - Parser.xlsx
tests/modelling/: conftest.py  test_models_isotherm.py
tests/parsing/: conftest.py  test_3p.py  test_aif.py  test_bel.py  test_csv.py  test_excel.py  test_isodb.py  test_json.py  test_mic.py  test_qnt.py  test_smsdvs.py  test_sqlite_db.py
tests/prediction/: conftest.py  test_enthalpy_to_isotherm.py  test_iast.py
tests/sample calorimetry/: header.csv
tests/units/: test_unit_parser.py
tests/utilities/: test_converter.py  test_coolprop_interaction.py  test_python_utilities.py  test_sqlite_utilities.py  test_string_utilities.py  test_utilities.py
(+429 files in other folders)
