[metadata]
name = pygaps
#version = attr: pygaps._version.version # version spec is broken for now
description = A framework for processing adsorption data for porous materials.
long_description = file: README.rst
long_description_content_type = "text/x-rst"
keywords = adsorption, characterization, porous materials, isotherms
author = Paul Iacomi
author_email = mail@pauliacomi.com
license = MIT license
license_files = LICENSE
url = https://github.com/pauliacomi/pygaps
project_urls =
    Documentation = https://pygaps.readthedocs.io
    Source Code = https://github.com/pauliacomi/pygaps
# Classifier list at https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Operating System :: Unix
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Chemistry

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.7
zip_safe = True
include_package_data = True
tests_require =
    pytest
    pytest-cov
    coverage[toml]
    nose
install_requires =
    numpy >= 1.16.5
    scipy >= 1.6
    pandas
    matplotlib
    coolprop >= 6.0
    xlrd >= 1.1
    xlwt >= 1.3
    openpyxl
    gemmi
    requests
# TODO remove after 3.8 is unsupported
    importlib_resources; python_version < "3.9"

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.entry_points]
console_scripts =
    pygaps = pygaps.cli:main

[options.extras_require]
dev =
    yapf
    isort
    pylint
    flake8
    autopep8
    pydocstyle
    bump2version
    pygments
    docutils
docs =
    pygments
    docutils >= 0.11
    doc8
    pandoc
    restructuredtext-lint
    sphinx>=1.4
    nbsphinx
    ipykernel
    sphinx_rtd_theme

[options.packages.find]
where=src

[bumpversion]
current_version = 3.1.0
commit = True
tag = False
message = '{current_version} → {new_version}'

[bumpversion:file:pyproject.toml]
search = fallback_version = '{current_version}'
replace = fallback_version = '{new_version}'

[bumpversion:file:src/pygaps/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:conda_recipe/meta.yaml]
search = version = release = '{current_version}'
replace = version = release = '{new_version}'

[pylint]
extension-pkg-whitelist = numpy, pandas, matplotlib

[flake8]
ignore =
    E402,
    W503,
    W504,
    E126
max-line-length = 140
exclude = .tox,.eggs,ci/templates,build,dist
docstring_style = numpy

[darglint]
docstring_style = numpy
