[metadata]
name = pygaps
version = attr: pygaps.__verison__
description = A framework for processing adsorption data for porous materials.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = adsorption, characterization, porous materials, isotherms
author = Paul Iacomi
author_email = mail@pauliacomi.com
license = MIT license
license_files = LICENSE
url = https://github.com/pauliacomi/pygaps
project_urls =
	Documentation = https://pygaps.readthedocs.io
	Source Code = https://github.com/pauliacomi/pygaps
classifiers =
	Development Status :: 5 - Production/Stable
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Operating System :: Unix
	Operating System :: POSIX
	Operating System :: Microsoft :: Windows
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: Implementation :: CPython
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering :: Physics
	Topic :: Scientific/Engineering :: Chemistry

[options]
package_dir =
	=src
packages = find_namespace:
python_requires = >=3.7
zip_safe = True
include_package_data = True
tests_require =
	pytest
	pytest-cov
	coverage[toml]
	nose
install_requires =
    adsorption-file-parser >= 0.2.6
	numpy >= 1.16.5
	scipy >= 1.5
	pandas >= 1.1
	matplotlib >= 3.3
	coolprop >= 6.0
	xlrd >= 1.1
	xlwt >= 1.3
	openpyxl
	gemmi
	requests
	importlib_resources; python_version < "3.9"

[options.packages.find]
where = src

[options.package_data]
* = *.txt, *.rst
pygaps.data = *, **

[options.entry_points]
console_scripts =
	pygaps = pygaps.cli:main

[options.extras_require]
dev =
	pytest
	pytest-cov
	coverage[toml]
    codecov
	nose
	yapf
	isort
	pylint
	flake8
	autopep8
	pydocstyle
	pygments
	docutils
docs =
	pygments >= 2.11
	docutils >= 0.11
	doc8
	pandoc
	restructuredtext-lint
	ipykernel
	sphinx >= 4.0
	sphinx-copybutton
	nbsphinx
	furo

[flake8]
ignore =
	E402
	W503
	W504
	E126
	E731
max-line-length = 140
exclude = .tox,.eggs,ci/templates,build,dist
docstring_style = numpy

[darglint]
docstring_style = numpy
